--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,10 +21,13 @@ jobs:
           echo "HOST=$(ifconfig | grep -E "([0-9]{1,3}\.){3}[0-9]{1,3}" | grep -v 127.0.0.1 | awk '{ print $2 }' | cut -f2 -d: | head -n1)" >> $GITHUB_ENV
 
       - name: Setup host config.properties
-        run: echo "host=$HOST:8111" >> src/main/resources/config.properties
+        run: -e echo "\nhost=$HOST:8111" >> src/main/resources/config.properties
 
-      - name: Pull Selenoid Chrome/Firefox/..
+      - name: Pull Selenoid Chrome
         run: docker pull selenoid/vnc_chrome:119.0
+
+      - name: Pull Selenoid Firefox
+        run: docker pull selenoid/vnc:firefox_89.0
 
       - name: Run Selenoid
         run: |
@@ -51,10 +54,10 @@ jobs:
           jetbrains/teamcity-server:latest
 
       - name: Set up superUserToken environment variable
-        run: echo "SUPER_USER_TOKEN=$(docker logs teamcity-server | grep 'Super user authentication token' | tail -n 1 | awk '{print $6}')" >> $GITHUB_ENV
+        run: echo "SUPER_USER_TOKEN=$(docker logs teamcity-server | grep 'Super user authentication token' | tail -n 1 | awk '{print \$6}')" >> $GITHUB_ENV
 
       - name: Set up superUserToken config property
-        run: echo "superUserToken=$SUPER_USER_TOKEN" >> src/main/resources/config.properties
+        run: -e echo "\nsuperUserToken=$SUPER_USER_TOKEN" >> src/main/resources/config.properties
 
       - name: Verify config.properties
         run: cat src/main/resources/config.properties
