--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,8 @@ jobs:
 
       - name: Run TeamCity Server
         run: |
-          docker run -u 0 -d --name teamcity-server \
+#          docker run -u 0 -d --name teamcity-server \
+          docker run -u 0 --name teamcity-server \
           -v $(pwd)/tmp/teamcity_server/datadir:/data/teamcity_server/datadir \
           -v $(pwd)/tmp/teamcity_server/logs:/opt/teamcity/logs \
           -p 8111:8111 \
