--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,14 +47,15 @@ jobs:
 
       - name: Run TeamCity Server
         run: |
-          docker run -u 0 --name teamcity-server \
+          docker run -u 0 -d --name teamcity-server \
           -v $(pwd)/tmp/teamcity_server/datadir:/data/teamcity_server/datadir \
           -v $(pwd)/tmp/teamcity_server/logs:/opt/teamcity/logs \
           -p 8111:8111 \
-          jetbrains/teamcity-server:latest
+          jetbrains/teamcity-server:2023.11.1
 
       - name: Set up superUserToken environment variable
-        run: echo "SUPER_USER_TOKEN=$(docker logs teamcity-server | grep 'Super user authentication token' | tail -n 1 | awk '{print $6}')" >> $GITHUB_ENV
+#        run: echo "SUPER_USER_TOKEN=$(docker logs teamcity-server | grep 'Super user authentication token' | tail -n 1 | awk '{print $6}')" >> $GITHUB_ENV
+        run: echo "SUPER_USER_TOKEN=$(docker logs teamcity-server)" >> $GITHUB_ENV
 
       - name: Set up config property
 #        run: echo "\nsuperUserToken=$SUPER_USER_TOKEN" >> src/main/resources/config.properties
