--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,14 +54,11 @@ jobs:
           jetbrains/teamcity-server:2023.11.1
 
       - name: Set up superUserToken environment variable
-#        run: echo "SUPER_USER_TOKEN=$(docker logs teamcity-server | grep 'Super user authentication token' | tail -n 1 | awk '{print $6}')" >> $GITHUB_ENV
-#        run: echo "SUPER_USER_TOKEN=$(docker logs teamcity-server)" >> $GITHUB_ENV
         run: |
-          docker logs teamcity-server | grep 'Super user authentication token'
-          echo "SUPER_USER_TOKEN=$(docker logs teamcity-server | grep 'Super user authentication token' | tail -n 1 | awk '{print $NF}')" >> $GITHUB_ENV
+          sleep 30s
+          echo "SUPER_USER_TOKEN=$(docker logs teamcity-server | grep 'Super user authentication token' | tail -n 1 | awk '{print $6}')" >> $GITHUB_ENV
 
       - name: Set up config property
-#        run: echo "\nsuperUserToken=$SUPER_USER_TOKEN" >> src/main/resources/config.properties
         run: |
           echo "superUserToken=$SUPER_USER_TOKEN" >> src/main/resources/config.properties
           echo "remote=true" >> src/main/resources/config.properties
