--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,12 +51,13 @@ jobs:
           -v $(pwd)/tmp/teamcity_server/datadir:/data/teamcity_server/datadir \
           -v $(pwd)/tmp/teamcity_server/logs:/opt/teamcity/logs \
           -p 8111:8111 \
-          jetbrains/teamcity-server:2023.11.1
+          jetbrains/teamcity-server:latest
+
+      - name: Sleep 1m
+        run: sleep 60s
 
       - name: Set up superUserToken environment variable
-        run: |
-          sleep 30s
-          echo "SUPER_USER_TOKEN=$(docker logs teamcity-server | grep 'Super user authentication token' | tail -n 1 | awk '{print $6}')" >> $GITHUB_ENV
+        run: echo "SUPER_USER_TOKEN=$(docker logs teamcity-server | grep 'Super user authentication token' | tail -n 1 | awk '{print $6}')" >> $GITHUB_ENV
 
       - name: Set up config property
         run: |
