--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,8 +48,8 @@ jobs:
       - name: Run TeamCity Server
         run: |
           docker run -u 0 -d --name teamcity-server \
-          -v $(pwd)/tmp/teamcity_server/datadir:/data/teamcity_server/datadir \
-          -v $(pwd)/tmp/teamcity_server/logs:/opt/teamcity/logs \
+          -v $(github.workspace)/tmp/teamcity_server/datadir:/data/teamcity_server/datadir \
+          -v $(github.workspace)/tmp/teamcity_server/logs:/opt/teamcity/logs \
           -p 8111:8111 \
           jetbrains/teamcity-server:latest
 
