--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,13 +48,13 @@ jobs:
       - name: Run TeamCity Server
         run: |
           docker run -u 0 -d --name teamcity-server \
-          -v $(github.workspace)/tmp/teamcity_server/datadir:/data/teamcity_server/datadir \
-          -v $(github.workspace)/tmp/teamcity_server/logs:/opt/teamcity/logs \
+          -v $(pwd)/tmp/teamcity_server/datadir:/data/teamcity_server/datadir \
+          -v $(pwd)/tmp/teamcity_server/logs:/opt/teamcity/logs \
           -p 8111:8111 \
           jetbrains/teamcity-server:latest
 
-      - name: Sleep 1m
-        run: sleep 60s
+      - name: Setup TeamCity Server
+        run: ./mvnw clean test -Dtest=SetupTest#setupTeamCityServerTest
 
       - name: Set up superUserToken environment variable
         run: echo "SUPER_USER_TOKEN=$(docker logs teamcity-server | grep 'Super user authentication token' | tail -n 1 | awk '{print $6}')" >> $GITHUB_ENV
@@ -62,14 +62,11 @@ jobs:
       - name: Set up config property
         run: |
           echo "superUserToken=$SUPER_USER_TOKEN" >> src/main/resources/config.properties
-          echo "remote=true" >> src/main/resources/config.properties
+          echo "remote=http://localhost:4444/wd/hub" >> src/main/resources/config.properties
           echo "browser=firefox" >> src/main/resources/config.properties
 
       - name: Verify config.properties
         run: cat src/main/resources/config.properties
-
-      - name: Setup TeamCity Server
-        run: ./mvnw clean test -Dtest=SetupTest#setupTeamCityServerTest
 
       - name: Run TeamCity agent
         run: |
