--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
             --name selenoid \
             -p 4444:4444 \
             -v /var/run/docker.sock:/var/run/docker.sock \
-            -v $(pwd)/config/:/etc/selenoid/:ro \
+            -v $(pwd)/infra/:/etc/selenoid/:ro \
             aerokube/selenoid
 
       - name: Run Selenoid UI
