--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Setup host config.properties
         run: echo "host=$HOST:8111" > src/main/resources/config.properties
 
-      - name: Pull Selenoid Chrome
-        run: docker pull selenoid/vnc_chrome:119.0
+#      - name: Pull Selenoid Chrome
+#        run: docker pull selenoid/vnc_chrome:119.0
 
       - name: Pull Selenoid Firefox
         run: docker pull selenoid/vnc:firefox_89.0
