--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,10 @@ jobs:
           echo "HOST=$(ifconfig | grep -E "([0-9]{1,3}\.){3}[0-9]{1,3}" | grep -v 127.0.0.1 | awk '{ print $2 }' | cut -f2 -d: | head -n1)" >> $GITHUB_ENV
 
       - name: Setup host config.properties
-        run: echo "host=$HOST:8111" > src/main/resources/config.properties
+        run: |
+          echo "host=$HOST:8111" > src/main/resources/config.properties
+          echo "remote=http://localhost:4444/wd/hub" >> src/main/resources/config.properties
+          echo "browser=firefox" >> src/main/resources/config.properties
 
 #      - name: Pull Selenoid Chrome
 #        run: docker pull selenoid/vnc_chrome:119.0
@@ -59,11 +62,8 @@ jobs:
       - name: Set up superUserToken environment variable
         run: echo "SUPER_USER_TOKEN=$(docker logs teamcity-server | grep 'Super user authentication token' | tail -n 1 | awk '{print $6}')" >> $GITHUB_ENV
 
-      - name: Set up config property
-        run: |
-          echo "superUserToken=$SUPER_USER_TOKEN" >> src/main/resources/config.properties
-          echo "remote=http://localhost:4444/wd/hub" >> src/main/resources/config.properties
-          echo "browser=firefox" >> src/main/resources/config.properties
+      - name: Set up super user token config property
+        run: echo "superUserToken=$SUPER_USER_TOKEN" >> src/main/resources/config.properties
 
       - name: Verify config.properties
         run: cat src/main/resources/config.properties
