--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,17 +68,23 @@ jobs:
       - name: Verify config.properties
         run: cat src/main/resources/config.properties
 
-      - name: Run TeamCity agent
-        run: |
-          docker run -e SERVER_URL=http://$HOST:8111 -u 0 -d --name teamcity-agent \
-          -v $(pwd)/tmp/teamcity_agent/conf:/data/teamcity_agent/conf \
-          jetbrains/teamcity-agent:latest
+#      - name: Run TeamCity agent
+#        run: |
+#          docker run -e SERVER_URL=http://$HOST:8111 -u 0 -d --name teamcity-agent \
+#          -v $(pwd)/tmp/teamcity_agent/conf:/data/teamcity_agent/conf \
+#          jetbrains/teamcity-agent:latest
+#
+#      - name: Set up TeamCity agent
+#        run: ./mvnw test -Dtest=SetupFirstStartTest#setupTeamCityAgentTest
 
-      - name: Set up TeamCity agent
-        run: ./mvnw test -Dtest=SetupFirstStartTest#setupTeamCityAgentTest
+      - name: Setup permissions
+        run: ./mvnw clean test -Dtest=BaseTest#enablePerProjectPermissions
 
-      - name: Run tests
-        run: ./mvnw test -Dgroups=Regression
+      - name: Run api tests
+        run: ./mvnw test -DsuiteXmlFile=api-suite.xml
+
+      - name: Run ui tests
+        run: ./mvnw test -DsuiteXmlFile=ui-suite.xml
 
 
           
