--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <google-gson.version>2.10.1</google-gson.version>
         <assertj-core.version>3.22.0</assertj-core.version>
         <selenide.version>7.0.2</selenide.version>
+        <xml-suite>testng-suites/default.xml</xml-suite>
     </properties>
 
     <dependencies>
@@ -102,10 +103,9 @@
                             <value>${project.build.directory}/allure-results</value>
                         </property>
                     </systemProperties>
-<!--                    <suiteXmlFiles>-->
-<!--                        <suiteXmlFile>testng-suites/api-suite.xml</suiteXmlFile>-->
-<!--                        <suiteXmlFile>testng-suites/ui-suite.xml</suiteXmlFile>-->
-<!--                    </suiteXmlFiles>-->
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${xml-suite}</suiteXmlFile>
+                    </suiteXmlFiles>
                 </configuration>
                 <dependencies>
                     <dependency>
