--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,14 +68,14 @@ jobs:
       - name: Verify config.properties
         run: cat src/main/resources/config.properties
 
-#      - name: Run TeamCity agent
-#        run: |
-#          docker run -e SERVER_URL=http://$HOST:8111 -u 0 -d --name teamcity-agent \
-#          -v $(pwd)/tmp/teamcity_agent/conf:/data/teamcity_agent/conf \
-#          jetbrains/teamcity-agent:latest
-#
-#      - name: Set up TeamCity agent
-#        run: ./mvnw test -Dtest=SetupFirstStartTest#setupTeamCityAgentTest
+      - name: Run TeamCity agent
+        run: |
+          docker run -e SERVER_URL=http://$HOST:8111 -u 0 -d --name teamcity-agent \
+          -v $(pwd)/tmp/teamcity_agent/conf:/data/teamcity_agent/conf \
+          jetbrains/teamcity-agent:latest
+
+      - name: Set up TeamCity agent
+        run: ./mvnw test -Dtest=SetupTest#setupTeamCityAgentTest
 
       - name: Setup permissions
         run: ./mvnw clean test -Dtest=BaseTest#enablePerProjectPermissions
