--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <assertj-core.version>3.22.0</assertj-core.version>
         <selenide.version>7.0.2</selenide.version>
         <xml-suite>testng-suites/default.xml</xml-suite>
+        <swagger-coverage.version>1.5.0</swagger-coverage.version>
     </properties>
 
     <dependencies>
@@ -84,6 +85,11 @@
             <groupId>com.codeborne</groupId>
             <artifactId>selenide</artifactId>
             <version>${selenide.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.viclovsky</groupId>
+            <artifactId>swagger-coverage-rest-assured</artifactId>
+            <version>${swagger-coverage.version}</version>
         </dependency>
     </dependencies>
     <build>
