--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,7 +54,7 @@ jobs:
           -v $(pwd)/tmp/teamcity_server/datadir:/data/teamcity_server/datadir \
           -v $(pwd)/tmp/teamcity_server/logs:/opt/teamcity/logs \
           -p 8111:8111 \
-          jetbrains/teamcity-server:latest
+          jetbrains/teamcity-server:2024.03.1
 
       - name: Setup TeamCity Server
         run: ./mvnw clean test -Dtest=SetupTest#setupTeamCityServerTest
@@ -124,3 +124,12 @@ jobs:
           path: |
             swagger-coverage-report.html
             swagger-coverage-results.json
+
+      # Swagger coverage репорт сохраняется в артефакты GitHub Actions прогона
+      - name: Publish Swagger coverage
+        uses: peaceiris/actions-gh-pages@v3
+        if: always()
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: target/swagger-coverage-output
