--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -122,10 +122,9 @@ jobs:
         with:
           name: swagger-coverage
           path: |
-            target/swagger-coverage-output/swagger-coverage-report.html
-            target/swagger-coverage-output/swagger-coverage-results.json
+            swagger-coverage-report.html
+            swagger-coverage-results.json
 
-#      # Swagger coverage репорт сохраняется в артефакты GitHub Actions прогона
 #      - name: Publish Swagger coverage
 #        uses: peaceiris/actions-gh-pages@v3
 #        if: always()
