--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -125,10 +125,10 @@ jobs:
             swagger-coverage-report.html
             swagger-coverage-results.json
 
-#      - name: Publish Swagger coverage
-#        uses: peaceiris/actions-gh-pages@v3
-#        if: always()
-#        with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          publish_branch: gh-pages
-#          publish_dir: target/swagger-coverage-output
+      - name: Publish Swagger coverage
+        uses: peaceiris/actions-gh-pages@v3
+        if: always()
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: swagger-coverage/swagger-coverage-report.html
