--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -131,4 +131,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: swagger-coverage/index.html
+          publish_dir: swagger-coverage
